updated gh pages deploy to be on specific branch, trying more iOS safari fixes from stackoverflow

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@
   background-attachment: scroll;
 } */
 
+html, body {
+  height:auto!important;
+  min-height:100vh;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
